# demogreen

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/: GF2_Barcelona_41.4158_2.1975.tif
src/demogreen/: demo_green.py
src/demogreen/cylib/: demogreen.cpp  demogreen.pyx
src/demogreen/cylib/cppsrc/: c_uniform.cpp  c_uniform.h
src/demogreen/pybindlib/: pybind_uniform_lib.cpp
