[metadata]
name = demoGreen
version = 0.1.0
description = Cython and PyBind11 performance analysis
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache V2.0
author = Pierre Lassalle
author_email = pierre.lassalle@cnes.fr


[options]
zip_safe = False
python_requires = >=3.8
package_dir = =src
packages = find:

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
#     gtshifter = gtshifter.gt_shifter:main


